// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "fə gɪg siːz fə wʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fə dɔgs siː fə wʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪfɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "fə gɪg wɔɪŋz æː fə dɪfəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "fə gɪg na siːz fə wʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾege βideɾet lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kakane βideɾent lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego daɾeo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾege ambulaɾet flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾege non βideɾet lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi luhin foweli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fofoweli luhin fofoweli",
    },
    {
      "english": "i give you the bread",
      "target": "mi pana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi tawatawo sæpi telofuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala luhin foweli",
    },
  ],
  "preset": "tokipona",
}
`;
